Try to fix min height on mobile phone

--- a/css/main.scss
+++ b/css/main.scss
@@ -13,8 +13,16 @@ a {
   text-decoration: none;
 }
 
-.wrapper {
+body {
+  background: #F3F3F3;
+  display: flex;
   height: 100vh;
+  justify-content: center;
+  justify-items: center;
+}
+
+.wrapper {
+  width: 100%;
   display: grid;
   grid-template-rows: 66% auto;
 
